--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
         <service android:name=".Receiver">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/prefix" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/accelerometer" />
             </intent-filter>
 
         </service>
