--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:+'
-    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.google.android.gms:play-services-wearable:10.0.0'
+    compile 'com.squareup:otto:1.3.8'
 }
