--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +18,14 @@
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
 
-                <data android:scheme="wear" android:host="*" android:path="/start" />
+                <data
+                    android:host="*"
+                    android:path="/start"
+                    android:scheme="wear" />
+                <data
+                    android:host="*"
+                    android:path="/stop"
+                    android:scheme="wear" />
             </intent-filter>
 
         </service>
