on click of export button, data is exported into filenames based on inputted user details

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
         </activity>
 
+        <activity android:name=".ExportData"></activity>
 
         <service android:name=".Receiver">
             <intent-filter>
