--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.facebook.stetho:stetho:1.4.1'
     compile 'com.uphyca:stetho_realm:2.0.0'
-
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -38,4 +37,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     compile files('C:/Users/ruby__000/AndroidStudioProjects/Accelerometer2/Libs/otto-1.3.8.jar')
+    compile files('C:/Users/ruby__000/AndroidStudioProjects/Accelerometer2/Libs/opencsv-3.8.jar')
 }
